--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -6,8 +6,7 @@
     "colab": {
       "name": "Text2Image_VQGAN.ipynb",
       "private_outputs": true,
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -40,7 +39,7 @@
         "Based on [CLIP](https://github.com/openai/CLIP) + VQGAN from [Taming Transformers](https://github.com/CompVis/taming-transformers).  \n",
         "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla) for ideas.\n",
         "\n",
-        "## Features \n",
+        "## Features\n",
         "* complex requests:\n",
         "  * image and/or text as main prompts  \n",
         "   (composition similarity controlled with [LPIPS](https://github.com/richzhang/PerceptualSimilarity) loss)\n",
@@ -48,7 +47,7 @@
         "  * criteria inversion (show \"the opposite\")\n",
         "\n",
         "* various VQGAN models (incl. newest Gumbel-F8)\n",
-        "* various CLIP models (incl. multi-language from [SBERT](https://sbert.net))\n",
+        "* various CLIP models\n",
         "* saving/loading VQGAN snapshots to resume processing"
       ]
     },
@@ -78,7 +77,7 @@
         "resume = False #@param {type:\"boolean\"}\n",
         "\n",
         "!pip install ftfy transformers\n",
-        "!pip install gputil ffpb \n",
+        "!pip install gputil ffpb\n",
         "\n",
         "import os\n",
         "import io\n",
@@ -109,8 +108,6 @@
         "\n",
         "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
         "import clip\n",
-        "!pip install sentence_transformers\n",
-        "from sentence_transformers import SentenceTransformer\n",
         "!pip install kornia\n",
         "import kornia\n",
         "!pip install lpips\n",
@@ -149,7 +146,7 @@
         "if not os.path.isdir('/content/models_TT'):\n",
         "  !mkdir -p /content/models_TT\n",
         "def getm(url, path):\n",
-        "  if os.path.isfile(path) and os.stat(path).st_size > 0: \n",
+        "  if os.path.isfile(path) and os.stat(path).st_size > 0:\n",
         "    print(' already exists', path, os.stat(path).st_size)\n",
         "  else:\n",
         "    !wget $url -O $path\n",
@@ -236,11 +233,8 @@
         "Type some `text` and/or upload some image to start.  \n",
         "Describe `style`, which you'd like to apply to the imagery.  \n",
         "Put to `subtract` the topics, which you would like to avoid in the result.  \n",
-        "`invert` the whole criteria, if you want to see \"the totally opposite\".\n",
-        "\n",
-        "Options for non-English languages (use only one of them!):  \n",
-        "`multilang` = use multi-language model, trained with ViT  \n",
-        "`translate` = use Google translate (works with any visual model)"
+        "`invert` the whole criteria, if you want to see \"the totally opposite\".  \n",
+        "Mark `translate` to use Google translation."
       ]
     },
     {
@@ -255,7 +249,6 @@
         "text = \"\" #@param {type:\"string\"}\n",
         "style = \"\" #@param {type:\"string\"}\n",
         "subtract = \"\" #@param {type:\"string\"}\n",
-        "multilang = False #@param {type:\"boolean\"}\n",
         "translate = False #@param {type:\"boolean\"}\n",
         "invert = False #@param {type:\"boolean\"}\n",
         "upload_image = False #@param {type:\"boolean\"}\n",
@@ -329,8 +322,6 @@
         "else:\n",
         "  lats = latents([1, 256, sideY//scale_res, sideX//scale_res]).cuda()\n",
         "\n",
-        "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
-        "\n",
         "if len(subtract) > 0:\n",
         "  samples = int(samples * 0.75)\n",
         "if sync > 0 and upload_image:\n",
@@ -343,16 +334,10 @@
         "if model in xmem.keys():\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
-        "if multilang:\n",
-        "  model_lang = SentenceTransformer('clip-ViT-B-32-multilingual-v1').cuda()\n",
-        "\n",
         "def enc_text(txt):\n",
-        "  if multilang:\n",
-        "    emb = model_lang.encode([txt], convert_to_tensor=True, show_progress_bar=False)\n",
-        "  else:\n",
-        "    emb = model_clip.encode_text(clip.tokenize(txt).cuda())\n",
+        "  emb = model_clip.encode_text(clip.tokenize(txt).cuda())\n",
         "  return emb.detach().clone()\n",
-        "        \n",
+        "\n",
         "sign = 1. if invert else -1.\n",
         "if aug_transform:\n",
         "  trform_f = transforms.transforms_fast\n",
@@ -380,30 +365,28 @@
         "  print(' text:', text)\n",
         "  if translate:\n",
         "    text = translator.translate(text, dest='en').text\n",
-        "    print(' translated to:', text) \n",
+        "    print(' translated to:', text)\n",
         "  txt_enc = enc_text(text)\n",
         "\n",
         "if len(style) > 0:\n",
         "  print(' style:', style)\n",
         "  if translate:\n",
         "    style = translator.translate(style, dest='en').text\n",
-        "    print(' translated to:', style) \n",
+        "    print(' translated to:', style)\n",
         "  txt_enc2 = enc_text(style)\n",
         "\n",
         "if len(subtract) > 0:\n",
         "  print(' without:', subtract)\n",
         "  if translate:\n",
         "    subtract = translator.translate(subtract, dest='en').text\n",
-        "    print(' translated to:', subtract) \n",
+        "    print(' translated to:', subtract)\n",
         "  txt_enc0 = enc_text(subtract)\n",
-        "\n",
-        "if multilang: del model_lang\n",
         "\n",
         "optimizer = torch.optim.AdamW(lats.parameters(), learning_rate, weight_decay=0.01, amsgrad=True)\n",
         "\n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
-        "  img = np.transpose(img, (1,2,0))  \n",
+        "  img = np.transpose(img, (1,2,0))\n",
         "  img = np.clip(img*255, 0, 255).astype(np.uint8)\n",
         "  if fname is not None:\n",
         "    imageio.imsave(fname, np.array(img))\n",
@@ -432,14 +415,14 @@
         "  if upload_image:\n",
         "      loss += sign * 0.5 * torch.cosine_similarity(img_enc, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
-        "    prog_sync = (steps - i) / steps \n",
+        "    prog_sync = (steps - i) / steps\n",
         "    loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
         "  del img_out, img_sliced, out_enc; torch.cuda.empty_cache()\n",
         "\n",
         "  optimizer.zero_grad()\n",
         "  loss.backward()\n",
         "  optimizer.step()\n",
-        "  \n",
+        "\n",
         "  if i % save_freq == 0:\n",
         "    checkout(i // save_freq)\n",
         "\n",
