--- a/IllusTrip3D.ipynb
+++ b/IllusTrip3D.ipynb
@@ -27,11 +27,11 @@
         "# IllusTrip: Text to Video 3D\n",
         "\n",
         "Part of [Aphantasia](https://github.com/eps696/aphantasia) suite, made by Vadim Epstein [[eps696](https://github.com/eps696)]  \n",
-        "Based on [CLIP](https://github.com/openai/CLIP) + FFT/pixel ops from [Lucent](https://github.com/greentfrapp/lucent). \n",
+        "Based on [CLIP](https://github.com/openai/CLIP) + FFT/pixel ops from [Lucent](https://github.com/greentfrapp/lucent).\n",
         "3D part by [deKxi](https://twitter.com/deKxi), based on [AdaBins](https://github.com/shariqfarooq123/AdaBins) depth.  \n",
         "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [@eduwatch2](https://twitter.com/eduwatch2) for ideas.\n",
         "\n",
-        "## Features \n",
+        "## Features\n",
         "* continuously processes **multiple sentences** (e.g. illustrating lyrics or poems)\n",
         "* makes **videos**, evolving with pan/zoom/rotate motion\n",
         "* works with [inverse FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) representation of the image or **directly with RGB** pixels (no GANs involved)\n",
@@ -39,7 +39,7 @@
         "* optional **depth** processing for 3D look\n",
         "* can start/resume from an image\n",
         "* various CLIP models, dual mode\n",
-        "* employs [aesthetic loss](https://github.com/LAION-AI/aesthetic-predictor) \n",
+        "* employs [aesthetic loss](https://github.com/LAION-AI/aesthetic-predictor)\n",
         "\n"
       ]
     },
@@ -64,7 +64,7 @@
         "#@title General setup\n",
         "\n",
         "!pip install ftfy transformers\n",
-        "!pip install gputil ffpb \n",
+        "!pip install gputil ffpb\n",
         "\n",
         "# !apt-get -qq install ffmpeg\n",
         "work_dir = '/content/illustrip'\n",
@@ -104,13 +104,11 @@
         "\n",
         "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
         "import clip\n",
-        "!pip install sentence_transformers\n",
-        "from sentence_transformers import SentenceTransformer\n",
         "!pip install kornia\n",
         "import kornia\n",
         "!pip install lpips\n",
         "import lpips\n",
-        "!pip install PyWavelets==1.1.1\n",
+        "!pip install PyWavelets\n",
         "!pip install git+https://github.com/fbcotter/pytorch_wavelets\n",
         "\n",
         "!pip install git+https://github.com/eps696/aphantasia\n",
@@ -125,15 +123,13 @@
         "work_dir = os.path.join(work_dir, 'aphantasia')\n",
         "%cd $work_dir\n",
         "from depth import depth\n",
-        "# !wget https://github.com/eps696/aphantasia/blob/master/mask.jpg?raw=true -O mask.jpg\n",
-        "depth_mask_file = os.path.join(work_dir, 'depth', 'mask.jpg')\n",
         "%cd /content\n",
         "\n",
         "clear_output()\n",
         "\n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
-        "  img = np.transpose(img, (1,2,0))  \n",
+        "  img = np.transpose(img, (1,2,0))\n",
         "  img = np.clip(img*255, 0, 255).astype(np.uint8)\n",
         "  if fname is not None:\n",
         "    imageio.imsave(fname, np.array(img))\n",
@@ -179,7 +175,7 @@
         "#@markdown For non-English languages use Google translation:\n",
         "translate = False #@param {type:\"boolean\"}\n",
         "\n",
-        "#@markdown Resume from an image (resolution settings below will be ignored in this case): \n",
+        "#@markdown Resume from an image (resolution settings below will be ignored in this case):\n",
         "\n",
         "if translate:\n",
         "  !pip3 install googletrans==3.1.0a0\n",
@@ -250,7 +246,7 @@
         "  import os\n",
         "  from google.colab import drive\n",
         "\n",
-        "  if not os.path.isdir('/G/MyDrive'): \n",
+        "  if not os.path.isdir('/G/MyDrive'):\n",
         "      drive.mount('/G', force_remount=True)\n",
         "  gdir = '/G/MyDrive'\n",
         "\n",
@@ -337,7 +333,7 @@
         "  aest = aesthetic_model(model).cuda()\n",
         "  if dualmod is not None:\n",
         "    aest2 = aesthetic_model('ViT-B/16').cuda()\n",
-        "    \n",
+        "\n",
         "%cd $work_dir\n",
         "clear_output()\n",
         "print(' using CLIP model', model if dualmod is None else 'dual')\n",
@@ -452,7 +448,7 @@
         "`interpolate_topics` changes the subjects smoothly, otherwise they're switched by cut, making sharper transitions.  \n",
         "\n",
         "Decrease **`samples`** if you face OOM (it's the main RAM eater), or just to speed up the process (with the cost of quality).  \n",
-        "`save_step` defines how many optimization steps are taken between saved frames, \n",
+        "`save_step` defines how many optimization steps are taken between saved frames,\n",
         "set it >1 for stronger image processing.  \n",
         "**`learning_rate`** is the main driver! Decrease it for softer and lighter effects, increase for more powerful but noisy processing.  \n",
         "Select optimizer: `_custom` options are more stable but noisy; pure `adam` is softer, but may spill some colored blur on longer videos.  \n",
@@ -488,26 +484,18 @@
       },
       "source": [
         "# pretrained models: Nyu is much better but Kitti is an option too\n",
-        "depth_model = 'nyu' # @ param [\"nyu\",\"kitti\"]\n",
+        "depth_model = 'large' #@param [\"large\",\"base\",\"small\"]\n",
         "DepthStrength = 0.01 #@param{type:\"number\"}\n",
         "save_depth = False #@param{type:\"boolean\"}\n",
-        "MaskBlurAmt = 33 \n",
-        "size = (sideY,sideX)\n",
+        "# size = (sideY,sideX)\n",
         "\n",
-        "#@markdown NB: depth computing may double rendering time. \n",
+        "#@markdown NB: depth computing may double rendering time.\n",
         "\n",
         "#@markdown Originally by [deKxi](https://twitter.com/deKxi)\n",
         "\n",
         "%cd $work_dir\n",
         "\n",
         "if DepthStrength != 0:\n",
-        "\n",
-        "  if not os.path.exists(\"AdaBins_nyu.pt\"):\n",
-        "    !gdown https://drive.google.com/uc?id=1lvyZZbC9NLcS8a__YPcUP7rDiIpbRpoF\n",
-        "    if not os.path.exists('AdaBins_nyu.pt'):\n",
-        "      !wget https://www.dropbox.com/s/tayczpcydoco12s/AdaBins_nyu.pt\n",
-        "  # if depth_model=='kitti' and not os.path.exists(os.path.join(workdir_depth, \"pretrained/AdaBins_kitti.pt\")):\n",
-        "    # !gdown https://drive.google.com/uc?id=1HMgff-FV6qw1L0ywQZJ7ECa9VPq1bIoj\n",
         "\n",
         "  if save_depth:\n",
         "    depthdir = os.path.join(tempdir, 'depth')\n",
@@ -516,18 +504,21 @@
         "  else:\n",
         "    depthdir = None\n",
         "\n",
-        "  depth_infer, depth_mask = depth.init_adabins(size=size, model_path='AdaBins_nyu.pt', mask_path=depth_mask_file)\n",
+        "  _deptha = depth.InferDepthAny(depth_model)\n",
         "\n",
-        "  def depth_transform(img_t, depth_infer, depth_mask, size, depthX=0, scale=1., shift=[0,0], colors=1, depth_dir=None, save_num=0):\n",
-        "    size2 = [s//2 for s in size]\n",
+        "  def depth_transform(img_t, depthX=0, scale=1., shift=[0,0], colors=1, depth_dir=None, save_num=0):\n",
+        "    if not isinstance(depthX, float): depthX = float(depthX)\n",
         "    if not isinstance(scale, float): scale = float(scale[0])\n",
+        "    size = img_t.shape[-2:]\n",
         "    # d X/Y define the origin point of the depth warp, effectively a \"3D pan zoom\", [-1..1]\n",
         "    # plus = look ahead, minus = look aside\n",
         "    dX = 100. * shift[0] / size[1]\n",
         "    dY = 100. * shift[1] / size[0]\n",
         "    # dZ = movement direction: 1 away (zoom out), 0 towards (zoom in), 0.5 stay\n",
-        "    dZ = 0.5 + 32. * (scale-1) \n",
-        "    img = depth.depthwarp(img_t, depth_infer, depth_mask, size2, depthX, [dX,dY], dZ, save_path=depth_dir, save_num=save_num)\n",
+        "    dZ = 0.5 + 32. * (scale-1)\n",
+        "    def ttt(x): return x\n",
+        "    img = to_valid_rgb(ttt, colors = colors)(img_t)\n",
+        "    img = depth.depthwarp(img_t, img, _deptha, depthX, [dX,dY], dZ, save_path=depth_dir, save_num=save_num)\n",
         "    return img\n"
       ],
       "execution_count": null,
@@ -660,7 +651,7 @@
         "    txt_encs  = intrl(txt_encs,  txt_encs2,  dualmod)\n",
         "    styl_encs = intrl(styl_encs, styl_encs2, dualmod)\n",
         "    del txt_encs2, styl_encs2\n",
-        "        \n",
+        "\n",
         "  if len(texts)  > 0: print(' ref text: ',  texts[min(num, len(texts)-1)][:80])\n",
         "  if len(styles) > 0: print(' ref style: ', styles[min(num, len(styles)-1)][:80])\n",
         "\n",
@@ -670,7 +661,7 @@
         "    # get encoded inputs\n",
         "    txt_enc  = txt_encs[ii % len(txt_encs)]   if len(txt_encs)  > 0 else None\n",
         "    styl_enc = styl_encs[ii % len(styl_encs)] if len(styl_encs) > 0 else None\n",
-        "    \n",
+        "\n",
         "    model_clip_ = model_clip2 if dualmod is not None and ii in dualmod_nums else model_clip\n",
         "    if aesthetic != 0:\n",
         "      aest_ = aest2 if dualmod is not None and ii in dualmod_nums else aest\n",
@@ -678,7 +669,7 @@
         "    ### animation: transform frame, reload params\n",
         "\n",
         "    h, w = sideY, sideX\n",
-        "    \n",
+        "\n",
         "    # transform frame for motion\n",
         "    scale =       m_scale[glob_step]    if animate_them else 1-zoom\n",
         "    trans = tuple(m_shift[glob_step])   if animate_them else [0, shift]\n",
@@ -687,7 +678,7 @@
         "\n",
         "    if method == 'RGB':\n",
         "      if DepthStrength != 0:\n",
-        "        params_tmp = depth_transform(params_tmp, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
+        "        params_tmp = depth_transform(params_tmp, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
         "      params_tmp = frame_transform(params_tmp, (h,w), angle, trans, scale, shear)\n",
         "      params, image_f, _ = pixel_image([1,3,h,w], resume=params_tmp)\n",
         "      img_tmp = None\n",
@@ -697,7 +688,7 @@
         "        params_tmp = torch.view_as_complex(params_tmp)\n",
         "      img_tmp = torch.fft.irfftn(params_tmp, s=(h,w), norm='ortho')\n",
         "      if DepthStrength != 0:\n",
-        "        img_tmp = depth_transform(img_tmp, depth_infer, depth_mask, size, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
+        "        img_tmp = depth_transform(img_tmp, DepthStrength, scale, trans, colors, depthdir, glob_step)\n",
         "      img_tmp = frame_transform(img_tmp, (h,w), angle, trans, scale, shear)\n",
         "      params_tmp = torch.fft.rfftn(img_tmp, s=[h,w], dim=[2,3], norm='ortho')\n",
         "      params_tmp = torch.view_as_real(params_tmp)\n",
@@ -759,7 +750,7 @@
         "      optimr.zero_grad()\n",
         "      loss.backward()\n",
         "      optimr.step()\n",
-        "    \n",
+        "\n",
         "    ### save params & frame\n",
         "\n",
         "    params_tmp = params[0].detach().clone()\n",
