--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -6,8 +6,7 @@
     "colab": {
       "name": "Aphantasia.ipynb",
       "private_outputs": true,
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -40,13 +39,13 @@
         "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent).  \n",
         "Thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [Hannu Toyryla](https://twitter.com/htoyryla), [@eduwatch2](https://twitter.com/eduwatch2) for ideas.\n",
         "\n",
-        "## Features \n",
-        "* generates massive detailed imagery, a la deepdream \n",
+        "## Features\n",
+        "* generates massive detailed imagery, a la deepdream\n",
         "* high resolution (up to 12K on RTX 3090)\n",
         "* directly parameterized with [FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) [Fourier] or DWT [wavelets], without pretrained GANs\n",
-        "* various CLIP models (including multi-language from [SBERT](https://sbert.net))\n",
+        "* various CLIP models\n",
         "* starting/resuming process from saved FFT parameters or from an image\n",
-        "* using [aesthetic loss](https://github.com/LAION-AI/aesthetic-predictor) \n",
+        "* using [aesthetic loss](https://github.com/LAION-AI/aesthetic-predictor)\n",
         "* complex requests:\n",
         "  * image and/or text as main prompts {with weights)  \n",
         "   (composition similarity controlled with [LPIPS](https://github.com/richzhang/PerceptualSimilarity) loss)\n",
@@ -64,7 +63,7 @@
         "\n",
         "Mark `resume` and upload `.pt` file, if you're resuming from the saved snapshot.  \n",
         "Or you can upload any image to start from - that is, to \"stylize\" that image.  \n",
-        "Resolution settings below will be ignored in this case. "
+        "Resolution settings below will be ignored in this case."
       ]
     },
     {
@@ -77,7 +76,7 @@
         "#@title General setup\n",
         "\n",
         "!pip install ftfy transformers\n",
-        "!pip install gputil ffpb \n",
+        "!pip install gputil ffpb\n",
         "\n",
         "import os\n",
         "import io\n",
@@ -108,8 +107,6 @@
         "\n",
         "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
         "import clip\n",
-        "!pip install sentence_transformers\n",
-        "from sentence_transformers import SentenceTransformer\n",
         "!pip install kornia\n",
         "import kornia\n",
         "!pip install lpips\n",
@@ -167,11 +164,8 @@
         "Describe `style`, which you'd like to apply to the imagery.  \n",
         "Put to `subtract` the topics, which you would like to avoid in the result.  \n",
         "All inputs understand syntax with weights: `goodprompt:1 | alsogoodprompt:1 | badprompt:-0.5`.  \n",
-        "`invert` the whole criteria, if you want to see \"the totally opposite\".\n",
-        "\n",
-        "Options for non-English languages (use only one of them!):  \n",
-        "`multilang` = use multi-language model, trained with ViT  \n",
-        "`translate` = use Google translate (works with any visual model)"
+        "`invert` the whole criteria, if you want to see \"the totally opposite\".  \n",
+        "Mark `translate` to use Google translation."
       ]
     },
     {
@@ -186,7 +180,6 @@
         "text = \"\" #@param {type:\"string\"}\n",
         "style = \"\" #@param {type:\"string\"}\n",
         "subtract = \"\" #@param {type:\"string\"}\n",
-        "multilang = False #@param {type:\"boolean\"}\n",
         "translate = False #@param {type:\"boolean\"}\n",
         "invert = False #@param {type:\"boolean\"}\n",
         "upload_image = False #@param {type:\"boolean\"}\n",
@@ -271,7 +264,6 @@
         "enhance = 0. #@param {type:\"number\"}\n",
         "macro = 0.4 #@param {type:\"number\"}\n",
         "progressive_grow = False #@param {type:\"boolean\"}\n",
-        "if multilang: model = 'ViT-B/32' # sbert model is trained with ViT\n",
         "diverse = -enhance\n",
         "expand = abs(enhance)\n",
         "\n",
@@ -365,9 +357,6 @@
         "if model in xmem.keys():\n",
         "  samples = int(samples * xmem[model])\n",
         "\n",
-        "if multilang is True:\n",
-        "    model_lang = SentenceTransformer('clip-ViT-B-32-multilingual-v1').cuda()\n",
-        "\n",
         "if dualmod is not None: # second is vit-16\n",
         "  model_clip2, _ = clip.load('ViT-B/16', jit=old_torch())\n",
         "  samples = int(samples * 0.25)\n",
@@ -386,10 +375,7 @@
         "      [subtxt, wt] = subtxt.split(':')\n",
         "      wt = float(wt)\n",
         "    else: wt = 1.\n",
-        "    if multilang is True:\n",
-        "      emb = model_lang.encode([subtxt], convert_to_tensor=True, show_progress_bar=False)\n",
-        "    else:\n",
-        "      emb = model_clip.encode_text(clip.tokenize(subtxt).cuda())\n",
+        "    emb = model_clip.encode_text(clip.tokenize(subtxt).cuda())\n",
         "    embs.append([emb.detach().clone(), wt])\n",
         "  return embs\n",
         "\n",
@@ -397,7 +383,7 @@
         "  samples = int(samples * 0.5)\n",
         "if sync > 0 and upload_image:\n",
         "  samples = int(samples * 0.6)\n",
-        "        \n",
+        "\n",
         "sign = 1. if invert is True else -1.\n",
         "if aug_transform is True:\n",
         "  trform_f = transforms.transforms_fast\n",
@@ -427,7 +413,7 @@
         "  print(' main topic:', text)\n",
         "  if translate:\n",
         "    text = translator.translate(text, dest='en').text\n",
-        "    print(' translated to:', text) \n",
+        "    print(' translated to:', text)\n",
         "  txt_enc = enc_text(text)\n",
         "  if dualmod is not None:\n",
         "    txt_enc2 = enc_text(text, model_clip2)\n",
@@ -436,7 +422,7 @@
         "  print(' style:', style)\n",
         "  if translate:\n",
         "    style = translator.translate(style, dest='en').text\n",
-        "    print(' translated to:', style) \n",
+        "    print(' translated to:', style)\n",
         "  style_enc = enc_text(style)\n",
         "  if dualmod is not None:\n",
         "    style_enc2 = enc_text(style, model_clip2)\n",
@@ -445,16 +431,14 @@
         "  print(' without:', subtract)\n",
         "  if translate:\n",
         "    subtract = translator.translate(subtract, dest='en').text\n",
-        "    print(' translated to:', subtract) \n",
+        "    print(' translated to:', subtract)\n",
         "  not_enc = enc_text(subtract)\n",
         "  if dualmod is not None:\n",
         "    not_enc2 = enc_text(subtract, model_clip2)\n",
         "\n",
-        "if multilang is True: del model_lang\n",
-        "\n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
-        "  img = np.transpose(img, (1,2,0))  \n",
+        "  img = np.transpose(img, (1,2,0))\n",
         "  img = np.clip(img*255, 0, 255).astype(np.uint8)\n",
         "  if fname is not None:\n",
         "    imageio.imsave(fname, np.array(img))\n",
@@ -465,7 +449,7 @@
         "    img = image_f(contrast=contrast).cpu().numpy()[0]\n",
         "    # empirical tone mapping\n",
         "    if sync > 0 and upload_image:\n",
-        "      img = img **1.3 \n",
+        "      img = img **1.3\n",
         "    # if sharpness != 0:\n",
         "      # img = img ** (1 + sharpness/2.)\n",
         "  save_img(img, os.path.join(tempdir, '%04d.jpg' % num))\n",
@@ -506,7 +490,7 @@
         "  if upload_image:\n",
         "    loss += sign * 0.7 * torch.cosine_similarity(img_enc_, out_enc, dim=-1).mean()\n",
         "  if sync > 0 and upload_image: # image composition sync\n",
-        "    prog_sync = (steps - i) / steps \n",
+        "    prog_sync = (steps - i) / steps\n",
         "    loss += prog_sync * sync * sim_loss(F.interpolate(img_out, sim_size).float(), img_in, normalize=True).squeeze()\n",
         "  if sharpness != 0 and not use_wavelets: # mode = scharr|sobel|default\n",
         "    loss -= sharpness * derivat(img_out, mode='sobel')\n",
@@ -527,13 +511,13 @@
         "\n",
         "  if progressive_grow is True:\n",
         "    lr_cur = lr0 + (i / steps) * (lr1 - lr0)\n",
-        "    for g in optimr.param_groups: \n",
+        "    for g in optimr.param_groups:\n",
         "      g['lr'] = lr_cur\n",
         "\n",
         "  optimr.zero_grad()\n",
         "  loss.backward()\n",
         "  optimr.step()\n",
-        "  \n",
+        "\n",
         "  if i % save_freq == 0:\n",
         "    checkout(i // save_freq)\n",
         "\n",
