--- a/Aphantasia.ipynb
+++ b/Aphantasia.ipynb
@@ -75,8 +75,7 @@
       "source": [
         "#@title General setup\n",
         "\n",
-        "!pip install ftfy transformers\n",
-        "!pip install gputil ffpb\n",
+        "!pip install ftfy gputil ffpb\n",
         "\n",
         "import os\n",
         "import io\n",
@@ -105,15 +104,15 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
-        "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
+        "!pip install --no-deps git+https://github.com/openai/CLIP.git\n",
         "import clip\n",
-        "!pip install kornia\n",
+        "!pip install --no-deps kornia kornia_rs\n",
         "import kornia\n",
-        "!pip install lpips\n",
+        "!pip install --no-deps lpips\n",
         "import lpips\n",
         "\n",
         "!pip install PyWavelets==1.1.1\n",
-        "!pip install git+https://github.com/fbcotter/pytorch_wavelets\n",
+        "!pip install --no-deps git+https://github.com/fbcotter/pytorch_wavelets\n",
         "import pywt\n",
         "from pytorch_wavelets import DWTForward, DWTInverse\n",
         "# from pytorch_wavelets import DTCWTForward, DTCWTInverse\n",
@@ -544,7 +543,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Consider [post-processing by ESRGAN](https://colab.research.google.com/drive/1CKwPQacNjmNA_ydY6Be7xwFNJJWJCm_T) with [\"painting\" models](https://archive.org/details/hr-painting-upscaling) by Peter Baylies.  \n",
+        "Consider [post-processing by ESRGAN](https://colab.research.google.com/github/eps696/Real-ESRGAN/blob/master/RealESRGAN.ipynb) with [\"painting\" models](https://archive.org/details/hr-painting-upscaling) by Peter Baylies.  \n",
         "`pre_downscale` option helps to clean up pixel noise from these methods.\n"
       ],
       "metadata": {
