--- a/CLIP_VQGAN.ipynb
+++ b/CLIP_VQGAN.ipynb
@@ -76,8 +76,7 @@
         "VQGAN_model = \"gumbel_f8-8192\" #@param ['gumbel_f8-8192', 'imagenet_f16-1024', 'imagenet_f16-16384']\n",
         "resume = False #@param {type:\"boolean\"}\n",
         "\n",
-        "!pip install ftfy transformers\n",
-        "!pip install gputil ffpb\n",
+        "!pip install ftfy gputil ffpb\n",
         "\n",
         "import os\n",
         "import io\n",
@@ -106,11 +105,11 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
-        "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
+        "!pip install --no-deps git+https://github.com/openai/CLIP.git\n",
         "import clip\n",
-        "!pip install kornia\n",
+        "!pip install --no-deps kornia kornia_rs\n",
         "import kornia\n",
-        "!pip install lpips\n",
+        "!pip install --no-deps lpips\n",
         "import lpips\n",
         "\n",
         "%cd /content\n",
@@ -119,7 +118,8 @@
         "from aphantasia import transforms\n",
         "from aphantasia.progress_bar import ProgressIPy as ProgressBar\n",
         "\n",
-        "!pip install omegaconf>=2.0.0 torchmetrics==0.6.2 pytorch-lightning>=1.0.8 einops>=0.3.0\n",
+        "!pip install omegaconf>=2.0.0 einops>=0.3.0\n",
+        "!pip3 install --no-deps torchmetrics lightning_utilities pytorch_lightning\n",
         "import pytorch_lightning as pl\n",
         "!git clone https://github.com/CompVis/taming-transformers\n",
         "!mv taming-transformers/* ./\n",
