--- a/Illustra.ipynb
+++ b/Illustra.ipynb
@@ -6,8 +6,7 @@
     "colab": {
       "name": "Illustra.ipynb",
       "private_outputs": true,
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -27,7 +26,7 @@
         "Based on [CLIP](https://github.com/openai/CLIP) + FFT from [Lucent](https://github.com/greentfrapp/lucent).  \n",
         "thanks to [Ryan Murdock](https://twitter.com/advadnoun), [Jonathan Fly](https://twitter.com/jonathanfly), [@eduwatch2](https://twitter.com/eduwatch2) for ideas.\n",
         "\n",
-        "## Features \n",
+        "## Features\n",
         "* **continuously processes phrase lists** (e.g. illustrating lyrics)\n",
         "* generates massive detailed high res imagery, a la deepdream\n",
         "* directly parameterized with [FFT](https://github.com/greentfrapp/lucent/blob/master/lucent/optvis/param/spatial.py) (no pretrained GANs)\n",
@@ -56,8 +55,7 @@
       "source": [
         "#@title General setup\n",
         "\n",
-        "!pip install ftfy transformers\n",
-        "!pip install gputil ffpb \n",
+        "!pip install ftfy gputil ffpb\n",
         "\n",
         "# !apt-get -qq install ffmpeg\n",
         "from google.colab import drive\n",
@@ -97,14 +95,14 @@
         "import warnings\n",
         "warnings.filterwarnings(\"ignore\")\n",
         "\n",
-        "!pip install git+https://github.com/openai/CLIP.git --no-deps\n",
+        "!pip install --no-deps git+https://github.com/openai/CLIP.git\n",
         "import clip\n",
-        "!pip install kornia\n",
+        "!pip install --no-deps kornia kornia_rs\n",
         "import kornia\n",
-        "!pip install lpips\n",
+        "!pip install --no-deps lpips\n",
         "import lpips\n",
         "!pip install PyWavelets==1.1.1\n",
-        "!pip install git+https://github.com/fbcotter/pytorch_wavelets\n",
+        "!pip install --no-deps git+https://github.com/fbcotter/pytorch_wavelets\n",
         "\n",
         "%cd /content\n",
         "!pip install git+https://github.com/eps696/aphantasia\n",
@@ -120,7 +118,7 @@
         "\n",
         "def save_img(img, fname=None):\n",
         "  img = np.array(img)[:,:,:]\n",
-        "  img = np.transpose(img, (1,2,0))  \n",
+        "  img = np.transpose(img, (1,2,0))\n",
         "  img = np.clip(img*255, 0, 255).astype(np.uint8)\n",
         "  if fname is not None:\n",
         "    imageio.imsave(fname, np.array(img))\n",
@@ -162,7 +160,7 @@
         "#@markdown For non-English languages use Google translation:\n",
         "translate = False #@param {type:\"boolean\"}\n",
         "\n",
-        "#@markdown Resume from the saved snapshot (resolution settings below will be ignored in this case): \n",
+        "#@markdown Resume from the saved snapshot (resolution settings below will be ignored in this case):\n",
         "resume = False #@param {type:\"boolean\"}\n",
         "\n",
         "if translate:\n",
@@ -285,7 +283,7 @@
         "  aest = aesthetic_model(model).cuda()\n",
         "  if dualmod is not None:\n",
         "    aest2 = aesthetic_model('ViT-B/16').cuda()\n",
-        "    \n",
+        "\n",
         "%cd $work_dir\n",
         "clear_output()\n",
         "print(' using CLIP model', model if dualmod is None else 'dual')\n"
@@ -398,7 +396,7 @@
         "#@title run\n",
         "\n",
         "work_dir = os.path.join(root_dir, workname)\n",
-        "if dualmod is None: work_dir += '-%s' % model.replace('/','').replace('-','') \n",
+        "if dualmod is None: work_dir += '-%s' % model.replace('/','').replace('-','')\n",
         "if enforce != 0:    work_dir += '-e%.2g' % enforce\n",
         "os.makedirs(work_dir, exist_ok=True)\n",
         "print('main dir', work_dir)\n",
@@ -438,7 +436,7 @@
         "\n",
         "count = 0\n",
         "\n",
-        "txt_encs = [enc_text(txt) for txt in texts] \n",
+        "txt_encs = [enc_text(txt) for txt in texts]\n",
         "if dualmod is not None:\n",
         "  txt_encs2 = [enc_text(txt, model_clip2) for txt in texts]\n",
         "count = max(count, len(txt_encs))\n",
@@ -447,7 +445,7 @@
         "if dualmod is not None:\n",
         "  styl_encs2 = [enc_text(style, model_clip2) for style in styles]\n",
         "count = max(count, len(styl_encs))\n",
-        "    \n",
+        "\n",
         "assert count > 0, \"No inputs found!\"\n",
         "\n",
         "outpic = ipy.Output()\n",
@@ -458,7 +456,7 @@
         "  noise = aug_noise * (torch.rand(1, 1, *params[0].shape[2:4], 1)-0.5).cuda() if aug_noise > 0 else None\n",
         "  img_out = image_f(noise)\n",
         "  img_sliced = slice_imgs([img_out], samples, modsize, trform_f, align, macro)[0]\n",
-        "  \n",
+        "\n",
         "  if len(texts) > 0:\n",
         "    txt_enc   = pick_(txt_encs2, num)  if dualmod is not None and i in dualmod_nums else pick_(txt_encs, num)\n",
         "  if len(styles) > 0:\n",
@@ -486,7 +484,7 @@
         "\n",
         "  del img_out, img_sliced, out_enc\n",
         "  assert not isinstance(loss, int), ' Loss not defined, check inputs'\n",
-        "  \n",
+        "\n",
         "  optimr.zero_grad()\n",
         "  loss.backward()\n",
         "  optimr.step()\n",
